ffi/poc/codec/crates/ak-abi/src/generated_corpus/abi.rs

// @generated by ffi/poc/codec/gen/generate.py from ffi/corpus/corpus.json (reader view) over ffi/schema/shapes.json. Do not edit.

//! The per-message part of the C ABI: section 6's groups and vtables, section 7's
//! decode fixes. Both the core and the host binding compile against this file.
#![allow(non_camel_case_types, non_upper_case_globals)]
// The fixed vocabulary (ak_str, ak_span, ak_blob, ak_uspan, ak_loop_f, ak_unk_f,
// AK_TOKEN_ROOT) is plan.FIXED's, rendered into ak-abi's lib.rs (WP5 step 6).
use super::super::{ak_blob, ak_dec_ctx, ak_enc_ctx, ak_loop_f, ak_span, ak_str, ak_unk_f};
use core::ffi::c_void;

/// Encode group for `TaskOptionsOptionsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_TaskOptionsOptionsEntry {
    pub key: ak_str,
    pub value: ak_str,
    pub presence: u32,
}
impl ak_efix_TaskOptionsOptionsEntry {
    pub const ZERO: Self = ak_efix_TaskOptionsOptionsEntry {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `TaskOptionsOptionsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_TaskOptionsOptionsEntry {
    pub key: ak_span,
    pub value: ak_span,
    pub presence: u32,
}
impl ak_dfix_TaskOptionsOptionsEntry {
    pub const ZERO: Self = ak_dfix_TaskOptionsOptionsEntry {
        key: ak_span { off: 0, len: 0, coder: 0 },
        value: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `TaskOptionsOptionsEntry`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_TaskOptionsOptionsEntry {
    pub key: ak_str,
    pub value: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_TaskOptionsOptionsEntry {
    pub const ZERO: Self = ak_ufix_TaskOptionsOptionsEntry {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ChunkElementAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkElementAttrsEntry {
    pub key: ak_str,
    pub value: ak_str,
    pub presence: u32,
}
impl ak_efix_ChunkElementAttrsEntry {
    pub const ZERO: Self = ak_efix_ChunkElementAttrsEntry {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `ChunkElementAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkElementAttrsEntry {
    pub key: ak_span,
    pub value: ak_span,
    pub presence: u32,
}
impl ak_dfix_ChunkElementAttrsEntry {
    pub const ZERO: Self = ak_dfix_ChunkElementAttrsEntry {
        key: ak_span { off: 0, len: 0, coder: 0 },
        value: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `ChunkElementAttrsEntry`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ChunkElementAttrsEntry {
    pub key: ak_str,
    pub value: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ChunkElementAttrsEntry {
    pub const ZERO: Self = ak_ufix_ChunkElementAttrsEntry {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `SurrogateAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_SurrogateAttrsEntry {
    pub key: ak_str,
    pub value: ak_str,
    pub presence: u32,
}
impl ak_efix_SurrogateAttrsEntry {
    pub const ZERO: Self = ak_efix_SurrogateAttrsEntry {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `SurrogateAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_SurrogateAttrsEntry {
    pub key: ak_span,
    pub value: ak_span,
    pub presence: u32,
}
impl ak_dfix_SurrogateAttrsEntry {
    pub const ZERO: Self = ak_dfix_SurrogateAttrsEntry {
        key: ak_span { off: 0, len: 0, coder: 0 },
        value: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `SurrogateAttrsEntry`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_SurrogateAttrsEntry {
    pub key: ak_str,
    pub value: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_SurrogateAttrsEntry {
    pub const ZERO: Self = ak_ufix_SurrogateAttrsEntry {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `Timestamp`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Timestamp {
    pub seconds: i64,
    pub nanos: i32,
    pub presence: u32,
}
impl ak_efix_Timestamp {
    pub const ZERO: Self = ak_efix_Timestamp {
        seconds: 0,
        nanos: 0,
        presence: 0,
    };
}

/// Decode group for `Timestamp`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Timestamp {
    pub seconds: i64,
    pub nanos: i32,
    pub presence: u32,
}
impl ak_dfix_Timestamp {
    pub const ZERO: Self = ak_dfix_Timestamp {
        seconds: 0,
        nanos: 0,
        presence: 0,
    };
}

/// Encode group for `Timestamp`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_Timestamp {
    pub seconds: i64,
    pub nanos: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_Timestamp {
    pub const ZERO: Self = ak_ufix_Timestamp {
        seconds: 0,
        nanos: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `Duration`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Duration {
    pub seconds: i64,
    pub nanos: i32,
    pub presence: u32,
}
impl ak_efix_Duration {
    pub const ZERO: Self = ak_efix_Duration {
        seconds: 0,
        nanos: 0,
        presence: 0,
    };
}

/// Decode group for `Duration`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Duration {
    pub seconds: i64,
    pub nanos: i32,
    pub presence: u32,
}
impl ak_dfix_Duration {
    pub const ZERO: Self = ak_dfix_Duration {
        seconds: 0,
        nanos: 0,
        presence: 0,
    };
}

/// Encode group for `Duration`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_Duration {
    pub seconds: i64,
    pub nanos: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_Duration {
    pub const ZERO: Self = ak_ufix_Duration {
        seconds: 0,
        nanos: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ResultRaw`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ResultRaw {
    pub session_id: ak_str,
    pub name: ak_str,
    pub owner_task_id: ak_str,
    pub status: i32,
    pub created_at: ak_efix_Timestamp,
    pub completed_at: ak_efix_Timestamp,
    pub result_id: ak_str,
    pub size: i64,
    pub created_by: ak_str,
    pub opaque_id: ak_str,
    pub manual_deletion: u8,
    pub presence: u32,
}
impl ak_efix_ResultRaw {
    pub const ZERO: Self = ak_efix_ResultRaw {
        session_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        name: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        owner_task_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        status: 0,
        created_at: ak_efix_Timestamp::ZERO,
        completed_at: ak_efix_Timestamp::ZERO,
        result_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        size: 0,
        created_by: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        opaque_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        manual_deletion: 0,
        presence: 0,
    };
}
pub const AK_EFIX_RESULTRAW_PRESENT_CREATED_AT: u32 = 1 << 0;
pub const AK_EFIX_RESULTRAW_PRESENT_COMPLETED_AT: u32 = 1 << 1;

/// Decode group for `ResultRaw`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ResultRaw {
    pub session_id: ak_span,
    pub name: ak_span,
    pub owner_task_id: ak_span,
    pub status: i32,
    pub created_at: ak_dfix_Timestamp,
    pub completed_at: ak_dfix_Timestamp,
    pub result_id: ak_span,
    pub size: i64,
    pub created_by: ak_span,
    pub opaque_id: ak_span,
    pub manual_deletion: u8,
    pub presence: u32,
}
impl ak_dfix_ResultRaw {
    pub const ZERO: Self = ak_dfix_ResultRaw {
        session_id: ak_span { off: 0, len: 0, coder: 0 },
        name: ak_span { off: 0, len: 0, coder: 0 },
        owner_task_id: ak_span { off: 0, len: 0, coder: 0 },
        status: 0,
        created_at: ak_dfix_Timestamp::ZERO,
        completed_at: ak_dfix_Timestamp::ZERO,
        result_id: ak_span { off: 0, len: 0, coder: 0 },
        size: 0,
        created_by: ak_span { off: 0, len: 0, coder: 0 },
        opaque_id: ak_span { off: 0, len: 0, coder: 0 },
        manual_deletion: 0,
        presence: 0,
    };
}
pub const AK_DFIX_RESULTRAW_PRESENT_CREATED_AT: u32 = 1 << 0;
pub const AK_DFIX_RESULTRAW_PRESENT_COMPLETED_AT: u32 = 1 << 1;

/// Encode group for `ResultRaw`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ResultRaw {
    pub session_id: ak_str,
    pub name: ak_str,
    pub owner_task_id: ak_str,
    pub status: i32,
    pub created_at: ak_ufix_Timestamp,
    pub completed_at: ak_ufix_Timestamp,
    pub result_id: ak_str,
    pub size: i64,
    pub created_by: ak_str,
    pub opaque_id: ak_str,
    pub manual_deletion: u8,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ResultRaw {
    pub const ZERO: Self = ak_ufix_ResultRaw {
        session_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        name: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        owner_task_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        status: 0,
        created_at: ak_ufix_Timestamp::ZERO,
        completed_at: ak_ufix_Timestamp::ZERO,
        result_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        size: 0,
        created_by: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        opaque_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        manual_deletion: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_RESULTRAW_PRESENT_CREATED_AT: u32 = 1 << 0;
pub const AK_UFIX_RESULTRAW_PRESENT_COMPLETED_AT: u32 = 1 << 1;

/// Encode group for `TaskOptions`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_TaskOptions {
    pub max_duration: ak_efix_Duration,
    pub max_retries: i32,
    pub priority: i32,
    pub partition_id: ak_str,
    pub application_name: ak_str,
    pub application_version: ak_str,
    pub application_namespace: ak_str,
    pub application_service: ak_str,
    pub engine_type: ak_str,
    pub presence: u32,
}
